cmake_minimum_required(VERSION 3.21)
project(ezCluster)
set(CMAKE_FIND_DEBUG_MODE 1)
find_package(PkgConfig REQUIRED)
find_package(faiss)
set(SOURCE_FILES example.cpp)
#set(CMAKE_CXX_FLAGS "-O2")
set(CMAKE_CXX_STANDARD 23)
add_executable(cluster ${SOURCE_FILES})
target_link_libraries(cluster faiss)

